Updates and error pages.

--- a/titellus.net/503.html
+++ b/titellus.net/503.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>titellus - files</title>
+  <title>titellus</title>
   <meta charset="utf-8"/>
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -19,7 +19,7 @@
 <body>
 <div class="container-fluid">
   <nav class="navbar navbar-light navbar-fixed-top bg-faded">
-    <a class="navbar-brand" href="#">titellus demo</a>
+    <a class="navbar-brand" href="#">titellus</a>
 
     <ul class="nav navbar-nav">
       <li class="nav-item">
@@ -30,13 +30,13 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"
+        <a class="nav-link"
            href="http://ci.titellus.net"
            title="Continuous Integration">
           <i class="fa fa-dashboard"></i>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link"
            href="http://files.titellus.net"
            title="Downloads">
@@ -55,3 +55,16 @@
 
 
   <div style="margin-top:80px">
+
+    <div class="alert alert-warning" role="alert">
+      <strong>Warning!</strong> The service you're looking for is down right now.
+      Come back later to check if the service goes live again or
+      go to <a href="http://titellus.net" class="alert-link">titellus.net home</a>.
+    </div>
+  </div>
+</div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"
+        integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7"
+        crossorigin="anonymous"></script>
+</body>
+</html>
