--- a/apps.titellus.net/index.html
+++ b/apps.titellus.net/index.html
@@ -31,7 +31,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link"
-           href="http://ci.titellus.net/jenkins"
+           href="http://ci.titellus.net"
            title="Continuous Integration">
           <i class="fa fa-dashboard"></i>
         </a>
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"
+        <a class="nav-link active"
            href="http://apps.titellus.net"
            title="Live demo">
           <i class="fa fa-play"></i>
