Add doc app and error page.

--- a/titellus.net/404.html
+++ b/titellus.net/404.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container-fluid">
   <nav class="navbar navbar-light navbar-fixed-top bg-faded">
-    <a class="navbar-brand" href="#">titellus</a>
+    <a class="navbar-brand" href="http://titellus.net">titellus</a>
 
     <ul class="nav navbar-nav">
       <li class="nav-item">
