--- a/titellus.net/500.html
+++ b/titellus.net/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>titellus - apps</title>
+  <title>titellus</title>
   <meta charset="utf-8"/>
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"
+        <a class="nav-link"
            href="http://apps.titellus.net"
            title="Live demo">
           <i class="fa fa-play"></i>
@@ -54,49 +54,12 @@
   </nav>
 
 
-  <div class="card-columns" style="margin-top:80px">
-    <div class="card card-block">
-      <p class="card-text">
-        <small class="text-muted">
-          titellus demo are updated continuously and should be up and running
-          most of the time ;)
-        </small>
-      </p>
-    </div>
-    <div class="card text-xs-center">
-      <img class="card-img-top"
-           src="https://avatars3.githubusercontent.com/u/1842442?v=3&s=120"/>
-      <div class="card-block">
-        <h4 class="card-title">GeoNetwork</h4>
-        <p class="card-text">
-          This is the demo site
-          of the latest GeoNetwork version
-          <a href="geonetwork" class="btn btn-primary">
-            <i class="fa fa-play"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="card text-xs-center">
-      <img class="card-img-top"
-           src="img/daobs.png" style="max-width: 180px;"/>
-      <div class="card-block">
-        <h4 class="card-title">INSPIRE dashboard</h4>
-        <p class="card-text">
-          The INSPIRE dashboard is based on <a href="https://github.com/titellus/daobs">daobs project</a> and harvest all EU Member States discovery services and provides interactive dashboards, reporting and analysis tools.
-          <a href="geonetwork" class="btn btn-primary">
-            <i class="fa fa-play"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="card text-xs-center">
-      <div class="card-block">
-        <h4 class="card-title">GeoNetwork documentation</h4>
-        <p class="card-text">
-          This is the GeoNetwork documentation updated on every commits
-          <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn btn-link">
-            <i class="fa fa-play"></i></a>
-        </p>
-      </div>
+  <div style="margin-top:80px">
+
+    <div class="alert alert-warning" role="alert">
+      <strong>Warning!</strong> Server error.
+      Come back later to check if the service goes live again or
+      go to <a href="http://titellus.net" class="alert-link">titellus.net home</a>.
     </div>
   </div>
 </div>
