--- a/apps.titellus.net/index.html
+++ b/apps.titellus.net/index.html
@@ -96,6 +96,7 @@
           <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn btn-link">
             <i class="fa fa-play"></i></a>
         </p>
+        <small class="text-muted">The official one is <a href="http://geonetwork-opensource.org/manuals/trunk/eng/users/">here</a> and <a href="http://geonetwork-opensource.org/manuals/trunk/fra/users/">ici</a>.</small>
       </div>
     </div>
   </div>
