INSPIRE icon set app.

--- a/apps.titellus.net/index.html
+++ b/apps.titellus.net/index.html
@@ -77,6 +77,17 @@
       </div>
     </div>
     <div class="card text-xs-center">
+      <div class="card-block">
+        <h4 class="card-title">GeoNetwork documentation</h4>
+        <p class="card-text">
+          This is the GeoNetwork documentation updated on every commits
+          <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn btn-link">
+            <i class="fa fa-play"></i></a>
+        </p>
+        <small class="text-muted">The official one is <a href="http://geonetwork-opensource.org/manuals/trunk/eng/users/">here</a> and <a href="http://geonetwork-opensource.org/manuals/trunk/fra/users/">ici</a>.</small>
+      </div>
+    </div>
+    <div class="card text-xs-center">
       <img class="card-img-top"
            src="img/daobs.png" style="max-width: 180px;"/>
       <div class="card-block">
@@ -89,14 +100,16 @@
       </div>
     </div>
     <div class="card text-xs-center">
+      <img class="card-img-top"
+           src="https://titellus.net/img/inspire.jpg"/>
       <div class="card-block">
-        <h4 class="card-title">GeoNetwork documentation</h4>
+        <h4 class="card-title">INSPIRE Themes icon set</h4>
         <p class="card-text">
-          This is the GeoNetwork documentation updated on every commits
-          <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn btn-link">
+          This is usefull when you need to display INSPIRE themes in a website.
+          <a href="http://apps.titellus.net/inspire-themes-icons/" class="btn btn-link">
             <i class="fa fa-play"></i></a>
         </p>
-        <small class="text-muted">The official one is <a href="http://geonetwork-opensource.org/manuals/trunk/eng/users/">here</a> and <a href="http://geonetwork-opensource.org/manuals/trunk/fra/users/">ici</a>.</small>
+        <small class="text-muted">Source code <a href="https://github.com/titellus/INSPIRE-themes-icons/">here</a>.</small>
       </div>
     </div>
   </div>
