--- a/titellus.net/index.html
+++ b/titellus.net/index.html
@@ -31,7 +31,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link"
-           href="http://ci.titellus.net/jenkins"
+           href="http://ci.titellus.net"
            title="Continuous Integration">
           <i class="fa fa-dashboard"></i>
         </a>
