--- a/apps.titellus.net/index.html
+++ b/apps.titellus.net/index.html
@@ -101,7 +101,7 @@
     </div>
     <div class="card text-xs-center">
       <img class="card-img-top"
-           src="https://titellus.net/img/inspire.jpg"/>
+           src="http://titellus.net/img/inspire.jpg"/>
       <div class="card-block">
         <h4 class="card-title">INSPIRE Themes icon set</h4>
         <p class="card-text">
