--- a/apps.titellus.net/index.html
+++ b/apps.titellus.net/index.html
@@ -81,7 +81,7 @@
         <h4 class="card-title">GeoNetwork documentation</h4>
         <p class="card-text">
           This is the GeoNetwork documentation updated on every commits
-          <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn btn-link">
+          <a href="http://files.titellus.net/geonetwork/doc/en/" class="btn  btn-primary">
             <i class="fa fa-play"></i></a>
         </p>
         <small class="text-muted">The official one is <a href="http://geonetwork-opensource.org/manuals/trunk/eng/users/">here</a> and <a href="http://geonetwork-opensource.org/manuals/trunk/fra/users/">ici</a>.</small>
@@ -94,7 +94,7 @@
         <h4 class="card-title">INSPIRE dashboard</h4>
         <p class="card-text">
           The INSPIRE dashboard is based on <a href="https://github.com/titellus/daobs">daobs project</a> and harvest all EU Member States discovery services and provides interactive dashboards, reporting and analysis tools.
-          <a href="geonetwork" class="btn btn-primary">
+          <a href="dashboard" class="btn btn-primary">
             <i class="fa fa-play"></i></a>
         </p>
       </div>
@@ -106,7 +106,7 @@
         <h4 class="card-title">INSPIRE Themes icon set</h4>
         <p class="card-text">
           This is usefull when you need to display INSPIRE themes in a website.
-          <a href="http://apps.titellus.net/inspire-themes-icons/" class="btn btn-link">
+          <a href="http://apps.titellus.net/inspire-themes-icons/" class="btn  btn-primary">
             <i class="fa fa-play"></i></a>
         </p>
         <small class="text-muted">Source code <a href="https://github.com/titellus/INSPIRE-themes-icons/">here</a>.</small>
