--- a/titellus.net/index.html
+++ b/titellus.net/index.html
@@ -62,8 +62,8 @@
           <address>
             <strong>titellus</strong>
             <br/>
-            313 Chemin du Four<br/>
-            73190 Saint Jeoire Prieuré<br/>
+            321 Route de la Mollière<br/>
+            73360 Saint Pierre de Genebroz<br/>
             France<br/>
           </address>
         </p>
